--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "semantic-release-attempt",
-  "version": "1.0.0",
+  "version": "0.0.0-build 1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Un-dev/semantic-release-attempt/issues"
   },
-  "homepage": "https://github.com/Un-dev/semantic-release-attempt#readme"
+  "homepage": "https://github.com/Un-dev/semantic-release-attempt#readme",
+  "devDependencies": {
+    "@semantic-release/github": "^7.2.0",
+    "semantic-release": "^17.3.7",
+    "semantic-release-gitmoji": "^1.3.4"
+  }
 }
