:green_heart: added token for ci npx sematic-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOK }}
         run: npx semantic-release
       - name: Push commit
         env:
